change config for scrapyd

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -7,5 +7,7 @@
 default = horse17.settings
 
 [deploy]
-#url = http://localhost:6800/
+url = http://localhost:6800/
 project = horse17
+username = chova
+password = woyebuzhidao
